mobs not implemented

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,26 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<!-- 
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyA4khlv097YITHF3f6Q1fHoczqL_jug49Y",
+    authDomain: "examportalreactapp.firebaseapp.com",
+    databaseURL: "https://examportalreactapp.firebaseio.com",
+    projectId: "examportalreactapp",
+    storageBucket: "examportalreactapp.appspot.com",
+    messagingSenderId: "111989776323",
+    appId: "1:111989776323:web:6faf11cc4fbaf5032da776"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script> -->
     <div id="root"></div>
     <!--
       This HTML file is a template.
